IDEA-23416 (IDEA>Settings>Editor>Colors&Fonts>File Status> "Merged with conflicts" displayed two times)

--- a/platform-resources_eng/src/messages/VcsBundle.properties
+++ b/platform-resources_eng/src/messages/VcsBundle.properties
@@ -9,6 +9,7 @@ file.status.name.hijacked=Hijacked
 file.status.name.switched=Switched
 file.status.name.obsolete=Obsolete
 file.status.name.merged.with.conflicts=Merged with conflicts
+file.status.name.merged.with.both.conflicts=Merged with text and property conflicts
 file.status.name.merged.with.property.conflicts=Merged with property conflicts
 file.status.name.deleted.from.file.system=Deleted from file system
 none.vcs.presentation=<none>
