--- a/platform-resources_eng/src/messages/ApplicationBundle.properties
+++ b/platform-resources_eng/src/messages/ApplicationBundle.properties
@@ -254,6 +254,7 @@ groupbox.display=Display
 checkbox.smooth.scrolling=Smooth scrolling
 checkbox.show.whitespaces=Show whitespaces
 checkbox.show.method.separators=Show method separators
+checkbox.show.small.icons.in.gutter=Show icons preview in gutter for small icons (Java)
 checkbox.show.line.numbers=Show line numbers
 checkbox.right.margin=Show right margin (configured in Code Style options)
 checkbox.use.block.caret=Use block caret
