--- a/plugins/spellchecker/core/src/com/intellij/spellchecker/util/SpellCheckerBundle.properties
+++ b/plugins/spellchecker/core/src/com/intellij/spellchecker/util/SpellCheckerBundle.properties
@@ -3,10 +3,10 @@ change.to=Change to...
 rename.to.0=Rename to ''{0}''
 rename.to=Rename to...
 spelling=Spelling
+misspelled.element.name=Misspelled element name
 comments.with.mistakes=Comments with mistakes
 word.0.1.is.misspelled=Word ''{0}'' is misspelled
-add.0.to.dictionary=Add ''{0}'' To Dictionary
-add.0.to.ignore.list=Add ''{0}'' To Ignore List
+add.0.to.dictionary=Accept ''{0}'' as correct
 class.name.with.mistakes=Class name with mistakes
 method.name.with.mistakes=Method name with mistakes
 field.name.with.mistakes=Field name with mistakes
