--- a/platform-resources_eng/src/messages/IdeBundle.properties
+++ b/platform-resources_eng/src/messages/IdeBundle.properties
@@ -769,6 +769,8 @@ prompt.new.project.file.name=Enter a file name to create a new {0} {1}
 prompt.enter.project.file.location=Enter {0} file location
 directory.project.file.directory=The {0} file directory\n
 prompt.overwrite.project.file=The {1} file \n''{0}''\nalready exists.\nWould you like to overwrite it?
+warning.message.the.module.file.0.already.exist.and.will.be.overwritten=The module file ''{0}'' already exist and will be overwritten.
+warning.text.0.do.you.want.to.continue={0}\nDo you want to continue?
 title.select.jdk=Select JDK
 button.configure.e=Configure...
 label.scope.pattern=&Pattern:
