extract method/method object: parameters folder

--- a/platform-resources_eng/src/messages/RefactoringBundle.properties
+++ b/platform-resources_eng/src/messages/RefactoringBundle.properties
@@ -371,6 +371,7 @@ extract.subclass.command=Extract Subclass
 extract.superclass.elements.header=Extract superclass with members to directory
 declare.static.checkbox=Declare &static
 declare.varargs.checkbox=Declare &varargs
+declare.folded.parameters=&Fold parameters
 extract.method.method.panel.border=Method
 there.are.multiple.exit.points.in.the.selected.code.fragment=There are multiple exit points in the selected code fragment.
 move.members.elements.header=Members to be moved
