workaround for sticky focused components and windows

--- a/platform-resources_eng/src/misc/registry.properties
+++ b/platform-resources_eng/src/misc/registry.properties
@@ -3,6 +3,8 @@ fileIndex.background.description=Build/update file indices in background
 fileIndex.background.restartRequired=true
 actionSystem.fixLostTyping=true
 actionSystem.fixLostTyping.description=Redispatch events, lost between actions and dialog show/close
+actionSystem.fixStickyFocusedWindows=true
+actionSystem.fixNullFocusedComponent=true
 actionSystem.commandProcessingTimeout=30000
 actionSystem.commandProcessingTimeout.description=Timeout after which currently proccessed command is forcibly cancelled
 actionSystem.typeAheadTimeBeforeDialog=2000
