GRVY-2197: Wrong 'Cannot assign' warning for raw map value; IDEADEV-37232: If a class does not extends Object explicitly, Object is not treated as superclass for this class; GRVY-1407: goto declaration on new Clazz() should navigate to constructor, not class declaration; IDEADEV-37232: If a class does not extends Object explicitly, Object is not treated as superclass for this class

--- a/plugins/groovy/src/META-INF/plugin.xml
+++ b/plugins/groovy/src/META-INF/plugin.xml
@@ -141,7 +141,7 @@
     <annotatedElementsSearch implementation="org.jetbrains.plugins.groovy.findUsages.AnnotatedMembersSearcher"/>
 
     <!--<gotoDeclarationHandler implementation="org.jetbrains.plugins.groovy.actions.GotoConstructorDeclarationHandler"/>-->
-    <!--<targetElementEvaluator language="Groovy" implementationClass="org.jetbrains.plugins.groovy.codeInsight.GroovyTargetElementEvaluator"/>-->
+    <targetElementEvaluator language="Groovy" implementationClass="org.jetbrains.plugins.groovy.codeInsight.GroovyTargetElementEvaluator"/>
 
     <!--<compiler implementation="org.jetbrains.plugins.groovy.compiler.GroovyCompiler"/>-->
 
