VCS: initialize VCS's under progress

--- a/platform-resources_eng/src/messages/VcsBundle.properties
+++ b/platform-resources_eng/src/messages/VcsBundle.properties
@@ -519,3 +519,4 @@ add.confirmation.label.text=When files are created with {0}:
 remove.confirmation.label.text=When files are deleted with {0}:
 rolling.back.file=Rolling back {0}
 perform.rollback.in.background.option=Perform revert in background
+all.vcs.init.message.text=Initializing VCS...
