SVN: annotations with merge sources - IDEA-21713 (Add option to use "svn blame -g" (or "--use-merge-history") when viewing SVN annotations)

--- a/platform-resources_eng/src/messages/VcsBundle.properties
+++ b/platform-resources_eng/src/messages/VcsBundle.properties
@@ -519,4 +519,7 @@ add.confirmation.label.text=When files are created with {0}:
 remove.confirmation.label.text=When files are deleted with {0}:
 rolling.back.file=Rolling back {0}
 perform.rollback.in.background.option=Perform revert in background
+annotation.original.revision.text=Revision: {0}
+annotation.switch.to.original.text=Hide merge sources
+annotation.switch.to.merged.text=Show merge sources
 all.vcs.init.message.text=Initializing VCS...
