--- a/platform-resources_eng/src/messages/OptionsBundle.properties
+++ b/platform-resources_eng/src/messages/OptionsBundle.properties
@@ -115,6 +115,7 @@ options.general.color.descriptor.right.margin=Right margin
 options.general.color.descriptor.whitespaces=Whitespaces
 options.general.color.descriptor.line.number=Line number
 options.general.color.descriptor.vcs.annotations=VCS annotations
+options.general.color.descriptor.vcs.annotations.merged=VCS annotations (merged from)
 options.general.color.descriptor.folding.outline=Folding outline
 options.general.color.descriptor.selected.folding.outline=Selected folding outline
 options.general.color.descriptor.added.lines=Added lines
