Clarified "unresolved reference" message for unresolved references qualified by things other than a class. (Fixes PY-188.)

--- a/python/src/com/jetbrains/python/PyBundle.properties
+++ b/python/src/com/jetbrains/python/PyBundle.properties
@@ -58,6 +58,7 @@ INSP.NAME.unresolved.refs=Unresolved references
 INSP.module.$0.not.found=Module ''{0}'' not found
 INSP.unresolved.ref.$0=Unresolved reference ''{0}''
 INSP.unresolved.ref.$0.for.class.$1=Unresolved attribute reference ''{0}'' for class ''{1}''
+INSP.cannot.find.$0.in.$1=Cannot find reference ''{0}'' in ''{1}''
 
 # ReturnValueFromInitInspection
 INSP.NAME.init.return=__init__ method that returns a value
