--- a/plugins/groovy/src/META-INF/plugin.xml
+++ b/plugins/groovy/src/META-INF/plugin.xml
@@ -64,8 +64,6 @@
     <moduleService serviceInterface="org.jetbrains.plugins.grails.projectView.GrailsViewFoldersManager"
                    serviceImplementation="org.jetbrains.plugins.grails.projectView.GrailsViewFoldersManager"/>
 
-    <treeStructureProvider implementation="org.jetbrains.plugins.grails.projectView.v2.GrailsProjectViewDataProvider"/>
-
     <!-- Groovy language -->
     <syntaxHighlighter key="Groovy" implementationClass="org.jetbrains.plugins.groovy.highlighter.GroovySyntaxHighlighter"/>
     <fileEditorProvider implementation="org.jetbrains.plugins.grails.perspectives.DomainClassesRelationsEditorProvider"/>
@@ -434,7 +432,7 @@
 
     <action id="Groovy.NewScript" class="org.jetbrains.plugins.groovy.actions.NewScriptAction"
             text="Groovy Script" description="Create new Groovy script">
-      <add-to-group group-id="NewGroup" anchor="after" relative-to-action="Grails"/>
+      <add-to-group group-id="NewGroup" anchor="last"/>
     </action>
     <action id="Groovy.NewClass" class="org.jetbrains.plugins.groovy.actions.NewGroovyClassAction"
             text="Groovy Class" description="Create new Groovy class">
@@ -442,7 +440,7 @@
     </action>
     <action id="Gant.NewScript" class="org.jetbrains.plugins.gant.actions.NewGantScriptAction"
             text="Gant Script" description="Create new Gant script">
-      <add-to-group group-id="NewGroup" anchor="after" relative-to-action="Groovy.NewAnnotation"/>
+      <add-to-group group-id="NewGroup" anchor="after" relative-to-action="Groovy.NewClass"/>
     </action>
 
 
@@ -462,27 +460,15 @@
       <add-to-group group-id="GenerateGroup" anchor="first"/>
     </action>
 
-    <group id="Grails" class="org.jetbrains.plugins.grails.actions.GrailsGroup"
-           text="Grails">
-      <action id="Grails.DomainClass" class="org.jetbrains.plugins.grails.actions.NewGrailsDomainClassAction"
-              text="Grails Domain Class" description="Create new Grails domain class">
-      </action>
-      <action id="Grails.Controller" class="org.jetbrains.plugins.grails.actions.NewGrailsControllerAction"
-              text="Grails Controller" description="Create new Grails controller">
-      </action>
-      <action id="Grails.Service" class="org.jetbrains.plugins.grails.actions.NewGrailsServiceAction"
-              text="Grails Service" description="Create new Grails service">
-      </action>
-      <action id="Grails.Script" class="org.jetbrains.plugins.grails.actions.NewGrailsScriptAction"
-              text="Grails Script" description="Create new Grails script">
-      </action>
-      <action id="Grails.TagLib" class="org.jetbrains.plugins.grails.actions.NewGrailsTagLibAction"
-              text="Grails TagLib" description="Create new Grails tagLib">
-      </action>
-      <action id="Grails.GSP" class="org.jetbrains.plugins.grails.actions.NewGspAction"
-              text="GSP" description="Create new Groovy Server Page">
-      </action>
-      <add-to-group group-id="NewGroup" anchor="last"/>
+    <group id="Grails" text="Grails" popup="false">
+      <action id="Grails.DomainClass" class="org.jetbrains.plugins.grails.actions.NewGrailsDomainClassAction"/>
+      <action id="Grails.Controller" class="org.jetbrains.plugins.grails.actions.NewGrailsControllerAction"/>
+      <action id="Grails.Service" class="org.jetbrains.plugins.grails.actions.NewGrailsServiceAction"/>
+      <action id="Grails.Script" class="org.jetbrains.plugins.grails.actions.NewGrailsScriptAction"/>
+      <action id="Grails.TagLib" class="org.jetbrains.plugins.grails.actions.NewGrailsTagLibAction"/>
+      <action id="Grails.GSP" class="org.jetbrains.plugins.grails.actions.NewGspAction"/>
+      <separator/>
+      <add-to-group group-id="NewGroup" anchor="first"/>
     </group>
 
     <action id="Grails.Plugins"
