IDEA-23571(SVN integration: hangs forever when using client certificates) - ask for SSL certificate in runtime

--- a/plugins/svn4idea/src/org/jetbrains/idea/svn/SvnBundle.properties
+++ b/plugins/svn4idea/src/org/jetbrains/idea/svn/SvnBundle.properties
@@ -72,6 +72,9 @@ label.ssh.key.file=Key &File:
 label.ssh.passphrase=Passph&rase:
 label.ssh.port=Port &Number:
 
+label.ssl.certificate.path=Path to certificate:
+label.ssl.certificate.password=Certificate passphrase:
+checkbox.ssl.keep.for.current.session=&Save Credentials
 
 progress.text.create.remote.folder=Create Remote Folder
 message.text.error=Error
