--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1727,6 +1727,6 @@ orred.not.equal.expression.quickfix=Change '||' to '&&'
 class.new.instance.display.name=Unsafe call to 'Class.newInstance()'
 class.new.instance.problem.descriptor=Call to <code>#ref()</code> may throw undeclared checked exceptions #loc
 class.new.instance.quickfix=Replace with 'Class.getConstructor().newInstance()' call
-dynamic.regex.replaceable.by.compiled.pattern.display.name=Dynamic Regular Expression could be replaced by compiled Pattern
+dynamic.regex.replaceable.by.compiled.pattern.display.name=Dynamic regular expression could be replaced by compiled Pattern
 dynamic.regex.replaceable.by.compiled.pattern.problem.descriptor=<code>#ref()</code> could be replaced with compiled java.util.regex.Pattern construct #loc
 dynamic.regex.replaceable.by.compiled.pattern.quickfix=Replace with call to method of compiled Pattern constant
