TreeUi: selection fixes for dumped tree

--- a/platform-resources_eng/src/misc/registry.properties
+++ b/platform-resources_eng/src/misc/registry.properties
@@ -18,6 +18,7 @@ ide.forcedShowTooltip.description=Shortcut for forced show tooltip
 ide.tree.yeildingUiUpdate=true
 ide.tree.showBusyIndicator=true
 ide.tree.waitForReadyTimout=250
+ide.tree.clearOnHideTime=120000
 debugger.valueTooltipAutoShow=true
 debugger.valueTooltipAutoShow.description=Auto show tooltip on mouse over
 
