--- a/platform-resources_eng/src/misc/registry.properties
+++ b/platform-resources_eng/src/misc/registry.properties
@@ -19,6 +19,7 @@ ide.tree.yeildingUiUpdate=true
 ide.tree.showBusyIndicator=true
 ide.tree.waitForReadyTimout=250
 ide.tree.clearOnHideTime=120000
+ide.tree.autoscrollToVCenter=false
 debugger.valueTooltipAutoShow=true
 debugger.valueTooltipAutoShow.description=Auto show tooltip on mouse over
 
