--- a/plugins/spellchecker/core/src/com/intellij/spellchecker/util/SpellCheckerBundle.properties
+++ b/plugins/spellchecker/core/src/com/intellij/spellchecker/util/SpellCheckerBundle.properties
@@ -3,7 +3,7 @@ change.to=Change to...
 rename.to.0=Rename to ''{0}''
 rename.to=Rename to...
 spelling=Spelling
-misspelled.element.name=Misspelled element name
+spellchecking.inspection.name=Typo
 comments.with.mistakes=Comments with mistakes
 word.0.1.is.misspelled=Word ''{0}'' is misspelled
 add.0.to.dictionary=Accept ''{0}'' as correct
@@ -21,4 +21,5 @@ enter.simple.word=Enter simple word:
 add.new.word=Add new word
 entered.word.0.is.mixed.cased.you.must.enter.simple.word=Entered word {0} is mixed cased. You must enter simple word
 entered.word.0.is.correct.you.no.need.to.add.this.in.list=Entered word {0} is correct. You no need to add this in list.
+no.suggestions=<no suggestion>
 
