IDEADEV-10757 (Add 'ignore...' checkboxes to 'Redundant interface declaration')

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1730,3 +1730,5 @@ class.new.instance.quickfix=Replace with 'Class.getConstructor().newInstance()' 
 dynamic.regex.replaceable.by.compiled.pattern.display.name=Dynamic regular expression could be replaced by compiled Pattern
 dynamic.regex.replaceable.by.compiled.pattern.problem.descriptor=<code>#ref()</code> could be replaced with compiled java.util.regex.Pattern construct #loc
 dynamic.regex.replaceable.by.compiled.pattern.quickfix=Replace with call to method of compiled Pattern constant
+ignore.serializable.option=ignore java.io.Serializable
+ignore.cloneable.option=ignore java.lang.Cloneable
