--- a/plugins/maven/src/main/resources/ProjectBundle.properties
+++ b/plugins/maven/src/main/resources/ProjectBundle.properties
@@ -49,9 +49,9 @@ maven.download.ondemand=On demand
 maven.download.always=On import
 
 maven.tab.ignored.files=Ignored Files
-maven.ignore=Ignore
-maven.unignore=Unignore
-maven.ignore.edit=Edit ignore settings...
+maven.ignore=Ignore Projects
+maven.unignore=Unignore Projects
+maven.ignore.edit=Edit Ignored Files...
 maven.profile.activate=Activate
 maven.profile.deactivate=Deactivate
 
