find in path to search in comments and literals via option

--- a/platform-resources_eng/src/messages/FindBundle.properties
+++ b/platform-resources_eng/src/messages/FindBundle.properties
@@ -77,6 +77,8 @@ find.filter.empty.file.mask.error=Empty file mask
 find.options.case.sensitive=&Case sensitive
 find.options.replace.preserve.case=Preser&ve case
 find.options.whole.words.only=&Whole words only
+find.options.string.literals.only=String &literals only
+find.options.comments.only=C&omments only
 find.options.regular.expressions=Regular &expressions
 find.direction.group=Direction
 find.direction.forward.radio=F&orward
